--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "My Final Project Template"
-author: Your name here
+author: Mustafa Gursoy
 subtitle: Subtitle here if desired
 date: today
 date-format: long
